Fix some bugs on market page
Compact board item header was not staying on top, and sorting by change of price after an IPO gave an out of bounds error

--- a/src/css/market.scss
+++ b/src/css/market.scss
@@ -240,6 +240,7 @@ div.board-outer {
         padding-top:50px;
         max-width:100%;
         max-height:100%;
+        position:relative;
         
         &::after {
             content:'';
@@ -252,6 +253,8 @@ div.board-outer {
             position:relative;
             text-align:right;
             border-collapse:collapse;
+            border-collapse:separate;
+            border-spacing:0;
             font-size:14px;
             color:$text-dark;
             .dark & {
@@ -266,6 +269,7 @@ div.board-outer {
                 position:sticky;
                 top:0;
                 box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+                z-index:10101;
                 .dark & {
                     background:$ui-dark;
                     box-shadow: 0 2px 2px -1px rgba(182, 182, 182, 0.4);
@@ -283,13 +287,12 @@ div.board-outer {
                 }
             }
             tr.compact-board-header {
+                z-index:1000;
                 th {
-                    z-index:10100;
                     height:50px;
                     transform:translateY(-10px);
                     cursor:pointer;
                 }
-                border-bottom:none;
             }
             td {
                 .coin {
